# estaciufba-couchbase

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: test.yml
estaciufba/: db.py  main.py
