[tool.poetry]
name = "estaciufba"
version = "0.1.0"
description = "Teste de recursos do Couchbase"
authors = ["André Walker <andre.walkermo@gmail.com>", "João Rios <joao.rios@ufba.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
couchbase = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"